[gd_scene load_steps=9 format=3 uid="uid://boxdud467x5wd"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_efugr"]
[ext_resource type="Texture2D" uid="uid://c3ebnn500vfi4" path="res://Assets/textures/bg.png" id="1_sa3g8"]
[ext_resource type="PackedScene" uid="uid://vhfnrdj0p4td" path="res://Scenes/hud.tscn" id="2_geb5a"]
[ext_resource type="PackedScene" uid="uid://dfeti7e1so4sx" path="res://Scenes/player.tscn" id="2_vqxyx"]
[ext_resource type="PackedScene" uid="uid://iij477d0ue0k" path="res://Scenes/enemy_spawner.tscn" id="3_0a8i6"]
[ext_resource type="AudioStream" uid="uid://r1vo4vmj6au8" path="res://Assets/audio/hit.wav" id="6_pqlkf"]
[ext_resource type="AudioStream" uid="uid://bbh4v6w8fncqh" path="res://Assets/audio/explode.wav" id="7_t3mto"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_piv84"]
size = Vector2(20, 718)

[node name="Game" type="Node2D"]
script = ExtResource("1_efugr")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("2_geb5a")]

[node name="Background" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("1_sa3g8")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_vqxyx")]
position = Vector2(50, 324)

[node name="EnemySpawner" parent="." instance=ExtResource("3_0a8i6")]

[node name="Deathzone" type="Area2D" parent="."]
position = Vector2(-100, 324)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deathzone"]
position = Vector2(0, 35)
shape = SubResource("RectangleShape2D_piv84")

[node name="EnemyHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_pqlkf")

[node name="PlayerHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_t3mto")

[connection signal="tookDamage" from="Player" to="." method="_on_player_took_damage"]
[connection signal="enemySpawn" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawn"]
[connection signal="pathEnemySpawn" from="EnemySpawner" to="." method="_on_enemy_spawner_path_enemy_spawn"]
[connection signal="area_entered" from="Deathzone" to="." method="_on_deathzone_area_entered"]
